# auto-upload-google-drive

./: .pre-commit-config.yaml  README.md  a.py  a.sql  env.py  main.py  pyproject.toml  test.txt
.github/workflows/: alembic-database-migration.yml  run.yml
database/: models.py
migrations/versions/: 0ad7311e71cd_create_users_google_accounts_transfer_.py  2a9e042a29c7_create_users.py
utils/: auth.py  database.py  drive.py  parsing.py  time.py  transfer.py
