[project]
name = "auto-upload-google-drive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "environs>=15.0.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
