[project]
name = "auto-upload-google-drive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "environs>=15.0.1",
    "google-api-python-client>=2.198.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
